@@ -19,6 +19,8 @@
       inbook entries.
     - Set limit to the number of displayed characters in group names in groups tree in order to
       avoid group panel width problems.
+    - Fixed error message when a # in a BibTeX string prevents saving. No longer states that the
+      problem is in an entry, but specifies that it is in a string.
     - Fixed bug: content selector for "editor" field uses "," instead of " and " as delimiter.
     - Fixed bug: editing source doesn't allow change of entry type.
     - RTFChars formatter now converts --- to \emdash and -- to \endash.
